# dynsyn

./: README
matlab/: aeif.m
misc/: README  ex2_mikael_lindahl.py  figsize.py  layer_test.py  layer_test2.2.1.py  movie.py  network_test.py  output.avi  parallel_for_loop.py  simulation_test.py
model/: connections_from_prob.py  model_params.py  old_model_params.py
model/scripts/: GPE_SNR_act_sel.py  GPE_SNR_filtering.py  GPE_SNR_syn_plast_dynamics.py  GPE_SNR_syn_resp.py  GPE_SNr_kita_rep.py  MSN_MSN_clamp.py  MSN_SNR_clamped.py  MSN_SNR_dyn_syn_network.py  MSN_SNR_syn_plast_dynamics.py  article_GPE_constant_ss_supression.py  article_act_inh_indirect.py  article_act_sel.py  article_act_sel_indirect.py  article_act_sel_mod_STN_GPe.py  article_clean_action_signaling.py  article_combine_MSN_GPE.py  article_filtering.py  article_inh_plus_burst.py  article_msn_example_diff_freq.py  article_robust_fluctuations.py  article_syn_plast_dynamics_STN.py  article_syn_resp_GPE.py  article_syn_resp_MSN.py  fig1_article_syn_plast_dynamics_GPE.py  fig1_article_syn_plast_dynamics_MSN.py  fig1_new_article_GPE_behavior.py  fig1_new_article_SNR_behavior.py  fig1_new_article_STN_behavior.py  fig1_new_article_network_rates.py  fig1_new_article_syn_SNr_resp_to_MSN_GPe_and_STN.py  fig2_new_article_network_example_direct.py  fig3_new_article_network_example_indirect.py  fig4_new_article_msn_at_thr.py  fig4_new_article_network_direct_filtering.py  fig4_new_article_network_hyper_direct.py  fig4_new_article_network_indirect_filtering.py  fig5_new_article_STN_short_long_effect.py  fig6_new_article_rate_coding.py  fig7_new_article_network_direct_vs_indirect.py  fig8_new_article_network_param_sensitivety.py  (+32 more)
nest_module/: compile-module2.sh  log.txt  random
nest_module/module-100725/: Makefile.am  drop_odd_spike_connection.h  izhik_cond_alpha.h  izhik_cond_beta.cpp  izhik_cond_beta.h  izhik_cond_beta_old.h  izhik_cond_exp.cpp  izhik_cond_exp.h  izhik_cond_exp_f.cpp  izhik_cond_exp_mu.cpp  ml_module.cpp  my_iaf_cond_exp.cpp  my_poisson_generator.cpp  my_poisson_generator.h  pif_psc_alpha.cpp  pif_psc_alpha.h  pif_psc_alpha_old.cpp  pif_psc_alpha_old.h  stdp_dop_connection.cpp  stdp_dop_connection.h  tsodyks_beta_connection.h  tsodyks_stocastic_connection.cpp  tsodyks_stocastic_connection.h
nest_toolbox/: CREATE_DISTRIBUTION  MANIFEST  MANIFEST.in
(+16 files in other folders)
